# zeno_engine

./: .clang-format  .gitignore  .gitmodules  CMakeLIsts.txt  CMakeLists.txt
resources/: model.gltf
sample/: CMakeLists.txt
sample/resources/: cube.gltf  sample.manifest
sample/source/: main.cpp
shaders/: shaders.hlsl
sources/: .main.cpp.swp  .window.cpp.swp  .window.hpp.swp  CMakeLists.txt  dx11.cpp  dxgi.cpp  engine.cpp  exceptions.cpp  gltf_loader.cpp  gltf_loader.hpp  main.cpp  renderer.cpp  renderer.hpp  window.cpp  zeno.hpp  zeno_defines.hpp
zeno/: CMakeLists.txt  zeno.hpp  zeno_defines.hpp  zeno_user_defines.hpp  zeno_user_difines.hpp
zeno/libraries/: CMakeLists.txt  zeno_libraries.hpp
zeno/libraries/zenosys/: CMakeLists.txt  zenosys.hpp
zeno/libraries/zenosys/headers/window_handling/: window.hpp
zeno/libraries/zenoutils/: CMakeLists.txt
zeno/libraries/zenoutils/sources/: string.cpp
zeno/modules/: CMakeLists.txt  zeno_modules.hpp
zeno/modules/zeno/: CMakeLists.txt
zeno/modules/zeno/headers/: engine.hpp  gltf_loader.hpp
zeno/modules/zeno/source/: engine.cpp  gltf_loader.cpp
zeno/modules/zenogfx/: CMakeLists.txt  zenogfx.hpp
zeno/modules/zenogfx/headers/: exceptions.hpp  renderer.hpp
zeno/modules/zenogfx/headers/components/: dx11.hpp
zeno/modules/zenogfx/sources/: exceptions.cpp  renderer.cpp
zeno/modules/zenogfx/sources/components/: dx11.cpp
zeno/resources/internal/: color_cube.gltf  shaders.hlsl  zeno.manifest  zenogfx.manifest
zeno/resources/user/: manifest-schema.xml  zeno_client.manifest
zeno/shaders/: fragment_shader.glsl  vertex_shader.glsl
zeno/zeno/: CMakeLists.txt
zeno/zeno/headers/: engine.hpp
zeno/zeno/source/: engine.cpp
zeno/zenocore/: CMakeLists.txt  zenocore.hpp
zeno/zenocore/headers/: engine.hpp
zeno/zenocore/headers/application/: application.hpp  window.hpp
zeno/zenocore/headers/engine/: engine.hpp
zeno/zenocore/source/: engine.cpp
zeno/zenocore/source/application/: application.cpp  window.cpp
zeno/zenocore/source/engine/: engine.cpp
zeno/zenocore/source/platform/: platform_windows.cpp
zeno/zenodx11/: CMakeLists.txt  zenodx11.hpp
zeno/zenodx11/etc/shaders/: shaders.hlsl
zeno/zenodx11/headers/: renderer.hpp
zeno/zenodx11/headers/exceptions/: exceptions.hpp
zeno/zenodx11/headers/renderer/: window.hpp
zeno/zenodx11/headers/window/: window.hpp
zeno/zenodx11/source/: renderer.cpp
zeno/zenodx11/source/renderer/: window.cpp
zeno/zenodx11/source/window/: window.cpp
zeno/zenodx11/sources/: renderer.cpp
zeno/zenodx11/sources/dxgi/: dxgi_module.cpp
zeno/zenogfx/: CMakeLists.txt
zeno/zenogfx/etc/shaders/: shaders.hlsl
zeno/zenogfx/headers/: exceptions.hpp  renderer.hpp
zeno/zenogfx/headers/components/: drawable.hpp  dx11.hpp  dx11_component.hpp  dxgi.hpp  dxgi_component.hpp
zeno/zenogfx/headers/components/drawable/: mesh.hpp
zeno/zenogfx/headers/dxgi/: dxgi_module.hpp
zeno/zenogfx/headers/exceptions/: exceptions.hpp
zeno/zenogfx/sources/: exceptions.cpp  renderer.cpp
zeno/zenogfx/sources/components/: drawable.cpp  dx11_component.cpp  dxgi.cpp  dxgi_component.cpp
zeno/zenogfx/sources/dxgi/: dxgi_module.cpp
zeno/zenogfx/sources/exceptions/: exceptions.cpp
zeno/zenoplat/: CMakeLists.txt  zenoplat.hpp
zeno/zenoplat/headers/: platform.hpp  window.hpp
zeno/zenoplat/headers/win32/: win32_window.hpp
zeno/zenoplat/headers/window/: window_dimenstions.hpp
zeno/zenoplat/source/platform/: windows.cpp
zeno/zenoplat/source/win32/: win32_platform.cpp  win32_window.cpp
zeno/zenosys/: CMakeLists.txt  zenosys.hpp
zeno/zenosys/headers/: window.hpp
zeno/zenosys/headers/memory/: com_pointer.hpp
zeno/zenosys/headers/memory/com_pointer/: com_deleter.hpp
zeno/zenosys/headers/window_handling/: window.hpp
zeno/zenosys/sources/: window.cpp
zeno/zenosys/sources/window_handling/: window.cpp
zeno/zenoutils/: CMakeLists.txt  zenoutils.hpp
zeno/zenoutils/headers/: com_pointer.hpp  string.hpp
zeno/zenoutils/headers/com_pointer/: com_deleter.hpp
